--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios-hooks": "^5.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "buffer": "^6.0.3",
     "js": "^0.1.0",
     "node": "^22.5.1",
     "react": "^18.3.1",
