--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "axios-hooks": "^5.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "js": "^0.1.0",
+    "mysql": "^2.18.1",
     "node": "^22.5.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
