--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.19.2",
@@ -18,7 +19,6 @@
     "js": "^0.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "node": "^22.5.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
