--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dompurify": "^3.1.6",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "js": "^0.1.0",
