--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
