--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dompurify": "^3.1.6",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "http": "^0.0.1-security",
     "js": "^0.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
