--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-router-dom": "^6.25.1",
