--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "start": "^5.1.0",
+    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
