--- a/.gitignore
+++ b/.gitignore
@@ -19,19 +19,10 @@
 .env.production.local
 .env
 
-
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-node_modules
-node_modules
-node_modules
-node_modules
-node_modules
-node_modules
-node_modules
-node_modules
-node_modules
-node_modules
-node_modules
+
+# cache
 .cache
