--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.77.8",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
