--- a/package.json
+++ b/package.json
@@ -28,17 +28,20 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "query": "^0.2.0",
+    "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.77.8",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "start": "^5.1.0",
+    "string": "^3.3.3",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
