--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.1.6",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
@@ -42,6 +43,7 @@
     "start": "^5.1.0",
     "string": "^3.3.3",
     "styled-components": "^6.1.12",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
