--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "start": "^5.1.0",
     "string": "^3.3.3",
     "styled-components": "^6.1.12",
+    "sweetalert2": "^11.12.4",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
