--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sweetalert2/theme-bulma": "^5.0.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "framer-motion": "^11.3.24",
+    "html2canvas": "^1.4.1",
     "http": "^0.0.1-security",
     "js": "^0.1.0",
     "moment": "^2.30.1",
